final stock example

--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,15 @@
   	  <artifactId>crawler</artifactId>
   	  <version>1.0.2</version>
     </dependency>
+    <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongo-java-driver</artifactId>
+        <version>2.13.3</version>
+    </dependency>    
+    <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>bson</artifactId>
+        <version>2.13.3</version>
+    </dependency>
   </dependencies>
 </project>
