--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,19 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
+	  <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>appassembler-maven-plugin</artifactId>
+          <version>1.8</version>
+          <configuration>
+            <programs>
+              <program>
+                <mainClass>crawler.example</mainClass>
+                <id>yahooStock</id>
+              </program>
+            </programs>
+          </configuration>
+        </plugin>           
     </plugins>
   </build>
   <dependencies>
@@ -42,5 +55,5 @@
         <artifactId>bson</artifactId>
         <version>2.13.3</version>
     </dependency>
-  </dependencies>
+  </dependencies> 
 </project>
