--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,11 @@
         <artifactId>bson</artifactId>
         <version>2.13.3</version>
     </dependency>
+	<dependency>
+		<groupId>com.google.guava</groupId>
+		<artifactId>guava</artifactId>
+		<version>19.0</version>
+	</dependency>
+
   </dependencies> 
 </project>
