--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,11 @@
   <groupId>com.github.abola</groupId>
   <artifactId>MyCrawlerExample</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
