--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,6 @@
           <target>1.7</target>
         </configuration>
       </plugin>
-      <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>2.3</version>
-        <configuration>
-          <warSourceDirectory>WebContent</warSourceDirectory>
-          <failOnMissingWebXml>false</failOnMissingWebXml>
-        </configuration>
-      </plugin>
 	  <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>appassembler-maven-plugin</artifactId>
@@ -34,7 +26,7 @@
           <configuration>
             <programs>
               <program>
-                <mainClass>crawler.example.YahooStock</mainClass>
+                <mainClass>crawler.example.past.YahooStock</mainClass>
                 <id>yahooStock</id>
               </program>
             </programs>
