--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
           <configuration>
             <programs>
               <program>
-                <mainClass>crawler.example.integtration.FBElasticImport</mainClass>
+                <mainClass>crawler.example.integration.FBElasticImport</mainClass>
                 <id>FBElasticImport</id>
               </program>
               <program>
